--- a/.github/workflows/Prebuild.yaml
+++ b/.github/workflows/Prebuild.yaml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   production:
-    name: 'Production'
+    name: "Production"
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -25,7 +25,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository }}
 
-      - name: 'Login to GitHub Container Registry'
+      - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -50,7 +50,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   development:
-    name: 'Development'
+    name: "Development"
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -69,7 +69,7 @@ jobs:
           flavor: |
             suffix=-dev.
 
-      - name: 'Login to GitHub Container Registry'
+      - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
@@ -85,6 +85,13 @@ jobs:
           fi
           echo "tags=$TAGS" >> $GITHUB_ENV
 
+      - name: Debug build context
+        run: |
+          echo "Build context will include:"
+          git ls-files
+          echo "Checking for requirements.txt:"
+          ls -la requirements.txt || echo "requirements.txt not found"
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
@@ -93,3 +100,12 @@ jobs:
           platforms: linux/arm64
           tags: ${{ env.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            BUILDKIT_PROGRESS=plain
+
+      - name: Debug on failure
+        if: ${{ failure() }}
+        run: |
+          echo "Build failed. Checking for intermediate files..."
+          docker buildx ls
+          docker images -a
