--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,9 +7,9 @@ ARG FOLDER=/app
 # Add user 1000 to docker containers - not root
 EXPOSE 8000
 WORKDIR ${FOLDER}
-COPY requirements.txt /app
+COPY requirements.txt ${FOLDER}
 RUN pip3 install -r requirements.txt --no-cache-dir
-COPY . /app
+COPY . ${FOLDER}
 ENTRYPOINT ["python3"] 
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
