--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,6 +7,7 @@ ARG FOLDER=/app
 # Add user 1000 to docker containers - not root
 EXPOSE 8000
 WORKDIR ${FOLDER}
+RUN ls -a
 COPY requirements.txt ${FOLDER}
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . ${FOLDER}
