--- a/DockerfileBase
+++ b/DockerfileBase
@@ -1,18 +1,15 @@
 # syntax=docker/dockerfile:1.4
 
-FROM --platform=$BUILDPLATFORM python:3.7-alpine AS base
-
-ARG FOLDER=/app
-
+FROM --platform=$BUILDPLATFORM python:3.7-alpine AS builder
 EXPOSE 8000
-WORKDIR ${FOLDER}
+WORKDIR /app 
 COPY requirements.txt /app
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . /app 
 ENTRYPOINT ["python3"] 
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
-FROM base AS release
+FROM builder as dev-envs
 RUN <<EOF
 apk update
 apk add git
