--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -12,6 +12,7 @@ RUN pip3 install -r requirements.txt --no-cache-dir
 ENTRYPOINT ["python3"] 
 CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
+RUN echo 'lolksjhajdhjsahdjashjdhjashjdhasjdhjashj'
 FROM builder as dev-envs
 RUN <<EOF
 apk update
