--- a/.diploi/helm/app.yaml
+++ b/.diploi/helm/app.yaml
@@ -31,9 +31,9 @@ spec:
       imagePullSecrets:
         - name: diploi-pull-secret
       {{- if eq .Values.stage "development"}}
-      # securityContext:
-        # runAsUser: 1000
-        # runAsGroup: 1000
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
       initContainers:
         - name: install-dependencies
           image: {{ .Values.images.app }}
@@ -43,6 +43,10 @@ spec:
           volumeMounts:
             - name: app-mount
               mountPath: /app
+          securityContext:
+            runAsUser: 0
+            runAsGroup: 0
+            allowPrivilegeEscalation: false
       {{- end }}
       containers:
         - name: app
