--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,28 +1,15 @@
-# syntax=docker/dockerfile:1.4
-
-FROM --platform=$BUILDPLATFORM python:3.7-alpine AS builder
+FROM python:3.13-alpine AS builder
 
 ARG FOLDER=/app
 
-# Add user 1000 to docker containers - not root
-EXPOSE 8000
 WORKDIR ${FOLDER}
-COPY requirements.txt /app
-RUN pip3 install -r requirements.txt --no-cache-dir
+
 COPY . /app
-ENTRYPOINT ["python3"] 
-CMD ["manage.py", "runserver", "0.0.0.0:8000"]
 
-FROM builder as dev-envs
-RUN <<EOF
-apk update
-apk add git
-EOF
+RUN pip3 install -r requirements.txt --no-cache-dir
 
-RUN <<EOF
-addgroup -S docker
-adduser -S --shell /bin/bash --ingroup docker vscode
-EOF
-# install Docker tools (cli, buildx, compose)
-COPY --from=gloursdocker/docker / /
-CMD ["manage.py", "runserver", "0.0.0.0:8000"]
+EXPOSE 8000
+
+ENTRYPOINT [ "python3" ]
+
+CMD [ "manage.py", "runserver", "0.0.0.0:8000" ]
