--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,6 +4,10 @@ ARG FOLDER=/app
 
 WORKDIR ${FOLDER}
 
+ENV ENV=development
+
+USER 1000:1000
+
 COPY . /app
 
 RUN pip3 install -r requirements.txt --no-cache-dir
