--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,13 +4,13 @@ ARG FOLDER=/app
 
 WORKDIR ${FOLDER}
 
-COPY . /app
+COPY --chown=1000:1000 . /app
+
+USER 1000:1000
 
 RUN pip3 install -r requirements.txt --no-cache-dir
 
 ENV ENV=development
-
-USER 1000:1000
 
 EXPOSE 8000
 
