--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,13 +4,17 @@ ARG FOLDER=/app
 
 WORKDIR ${FOLDER}
 
-COPY --chown=1000:1000 . /app
+COPY . /app
 
-USER 1000:1000
-
-RUN pip3 install -r requirements.txt --no-cache-dir
+RUN <<EOF
+python3 -m venv venv
+source venv/bin/activate
+pip3 install -r requirements.txt --no-cache-dir
+EOF
 
 ENV ENV=development
+
+USER 1000:1000
 
 EXPOSE 8000
 
