--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,17 +4,18 @@ ARG FOLDER=/app
 
 WORKDIR ${FOLDER}
 
+RUN apk add --no-cache shadow
+
+RUN groupadd -g 1000 devgroup && \
+    useradd -u 1000 -g 1000 -m devuser
+
 COPY . /app
 
-RUN <<EOF
-python3 -m venv venv
-source venv/bin/activate
-pip3 install -r requirements.txt --no-cache-dir
-EOF
+RUN chown -R 1000:1000 /app
 
-ENV ENV=development
+RUN pip3 install -r requirements.txt --no-cache-dir
 
-USER 1000:1000
+USER devuser
 
 EXPOSE 8000
 
