--- a/.diploi/helm/app.yaml
+++ b/.diploi/helm/app.yaml
@@ -30,6 +30,23 @@ spec:
       terminationGracePeriodSeconds: 10
       imagePullSecrets:
         - name: diploi-pull-secret
+      {{- if eq .Values.stage "development"}}
+      securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
+      initContainers:
+        - name: install-dependencies
+          image: {{ .Values.images.app }}
+          imagePullPolicy: Always
+          command: ['pip3', 'install', '-r', 'requirements.txt','--no-cache-dir]
+          workingDir: /app/{{ .Values.identifier }}
+          env:
+          - name: DJANGO_ENV
+            value: development
+          volumeMounts:
+            - name: app-mount
+              mountPath: /app
+      {{- end }}
       containers:
         - name: app
           image: {{ .Values.images.app }}
