--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,7 +11,7 @@ RUN groupadd -g 1000 devgroup && \
 
 COPY . /app
 
-RUN chown -R 1000:1000 /app
+RUN chown -R devuser:devgroup /app
 
 RUN pip3 install -r requirements.txt --no-cache-dir
 
