Revert "Update - Changed pip install to store packages locally"

--- a/.diploi/helm/app.yaml
+++ b/.diploi/helm/app.yaml
@@ -38,7 +38,7 @@ spec:
         - name: install-dependencies
           image: {{ .Values.images.app }}
           imagePullPolicy: Always
-          command: ['pip3', 'install', '-r', 'requirements.txt','--no-cache-dir','-t','packages']
+          command: ['pip3', 'install', '-r', 'requirements.txt','--no-cache-dir']
           workingDir: /app/{{ .Values.identifier }}
           env:
           - name: DJANGO_ENV
