--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,6 +13,8 @@ COPY . /app
 
 RUN chown -R devuser:devgroup /app
 
+RUN pip3 install -r requirements.txt --no-cache-dir
+
 USER devuser
 
 EXPOSE 8000
